# toy-model-superposition

./: .gitignore  README.md  main.py  pyproject.toml
core/: activations.py  model.py  trainer.py  visualisation.py
notebooks/: superposition.ipynb
